JUnit 5 migration
* cayenne
* cayenne-dbsync
* cayenne-maven-plugin
* cayenne-project-compatibility
* cayenne-velocity
* cayenne-osgi
* cayenne-jcache